<resources>
    <string name="app_name">S Project</string>
    <string name="percentage_symbol">%</string>
    <string name="encrypted">Encrypted</string>
    <string name="gb">GB</string>
    <string name="free_space">Free Space</string>
    <string name="internal_storage_pictures"><![CDATA[Internal Storage > Pictures > Personal > Docs]]></string>
    <string name="title_activity_call_logs">CallLogs</string>
    <string name="profile">profile</string>
    <string name="all_calls">All Calls</string>
    <string name="search">Search</string>
    <string name="messaging">Messaging</string>
    <string name="message_text">message text</string>
    <string name="title_activity_person">person</string>
    <string name="enter_text">Enter text&#8230;</string>
    <string name="_0_item_selected">0 item selected</string>
    <string name="images">Images</string>
    <string name="vault">Vault</string>
    <string name="audio_file_name">audio file name</string>
    <string name="documents">Documents</string>
    <string name="document_file_name">document file name</string>
    <string name="text">text</string>
    <string name="sample_text">sample text</string>
    <string name="file_manager">File Manager</string>
    <string name="audio">Audio</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="sd_card">SD Card</string>
    <string name="encrypt">Encrypt</string>
    <string name="encrypt_file">Encrypt file</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="folder_name">folder name</string>
    <string name="location">Location:</string>
    <string name="size">Size:</string>
    <string name="last_modified">Last modified:</string>
    <string name="type">Type:</string>
    <string name="zip">Zip</string>
    <string name="video">Video</string>
    <string name="file">file</string>
    <string name="no_item_selected">0 item selected</string>
    <string name="one_item_selected">1 item selected</string>
    <string name="items_selected">items selected</string>
    <string name="decrypt_file">Decrypt file</string>
    <string name="next">Next</string>
    <string name="clear">clear</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="seguro">seguro</string>
    <string name="export_file">Export file</string>
    <string name="open_file">Open file</string>
    <string name="wrong_pin">wrong pin</string>
    <string name="email_id">Email ID</string>
    <string name="name">Name</string>
    <string name="set_pin">Set Pin</string>

</resources>
