<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:background="@color/white"
    android:layout_gravity="center_horizontal"
    android:layout_width="@dimen/dialogue_box_width"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="24dp"
            android:text="@string/are_you_sure_you_want_to_delete"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cancel_btn"
                android:text="@string/cancel"
                android:textColor="@color/darkGrey"
                android:background="?attr/selectableItemBackground"
                android:padding="18dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/delete_btn"
                android:text="@string/delete"
                android:textColor="@color/primaryBlue"
                android:background="?attr/selectableItemBackground"
                android:padding="18dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>