<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/home_header_gradient"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/profile_btn"
            android:src="@drawable/ic_account_circle_white_36dp"
            android:background="@color/transparent"
            android:layout_width="28dp"
            android:scaleType="fitXY"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/profile" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_bg"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/home_header_gradient" />

        <ImageView
            android:id="@+id/header_wave_pattern"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@id/header_bg"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/wave_pattern" />

        <LinearLayout
            android:id="@+id/header_linear_layout"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/encryption_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="54"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@+id/encryption_data"
                    android:text="@string/percentage_symbol"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="55dp"
                    android:text="@string/encrypted"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/storage_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="1.68"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@+id/storage_data"
                    android:text="@string/gb"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="55dp"
                    android:text="@string/free_space"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <GridView
        android:id="@+id/grid_view_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:columnWidth="120dp"
        android:background="@android:color/white"
        android:stretchMode="spacingWidth"
        android:numColumns="auto_fit" />
</LinearLayout>