<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="5dp"
    android:background="@color/white"
    android:layout_gravity="center_horizontal"
    android:layout_width="@dimen/dialogue_box_width"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="18dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/icon"
                android:src="@drawable/folder"
                android:layout_width="24dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/name"
                android:paddingStart="12dp"
                android:text="@string/folder_name"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/darkGrey"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="18dp"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/location"
                android:textColor="@color/darkGrey"
                android:textAlignment="textEnd"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/path"
                android:paddingStart="12dp"
                android:textColor="@color/darkGrey"
                android:text="@string/location"
                android:textAlignment="textStart"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="18dp"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/size"
                android:textColor="@color/darkGrey"
                android:textAlignment="textEnd"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/size"
                android:paddingStart="12dp"
                android:textColor="@color/darkGrey"
                android:text="size"
                android:textAlignment="textStart"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="18dp"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/last_modified"
                android:textColor="@color/darkGrey"
                android:textAlignment="textEnd"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/date"
                android:paddingStart="12dp"
                android:textColor="@color/darkGrey"
                android:text=""
                android:textAlignment="textStart"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="18dp"
            android:paddingBottom="24dp"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/type"
                android:textColor="@color/darkGrey"
                android:textAlignment="textEnd"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/type"
                android:paddingStart="12dp"
                android:textColor="@color/darkGrey"
                android:text=""
                android:textAlignment="textStart"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>