<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FileManager">

    <RelativeLayout
        android:id="@+id/app_toolbar"
        android:background="@drawable/home_header_gradient"
        android:layout_width="match_parent"
        android:elevation="0dp"
        android:layout_height="@dimen/tool_bar_size">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_alignStart="@+id/heading_tv"
            android:padding="@dimen/tool_bar_icon_padding"
            android:src="@drawable/back_arrow"
            android:scaleType="centerInside"
            android:tint="@color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:layout_height="match_parent"
            android:focusable="true" />

        <TextView
            android:id="@+id/heading_tv"
            android:text="@string/file_manager"
            android:textSize="@dimen/heading"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/menu_select_all_btn"
            android:padding="@dimen/tool_bar_icon_padding"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/checkbox_selector"
            android:layout_alignEnd="@+id/heading_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <RelativeLayout
        android:background="@drawable/home_header_gradient"
        android:id="@+id/search_bar"
        android:focusableInTouchMode="true"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:layout_below="@+id/app_toolbar"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/text_field"
            android:drawableStart="@drawable/ic_search_black_18dp"
            android:drawablePadding="8dp"
            android:textColor="@color/grey"
            android:textColorHint="@color/lightGrey"
            android:background="@drawable/edittext_rounded_corner"
            android:inputType="textPersonName"
            android:hint="@string/search" />

    </RelativeLayout>

    <TextView
        android:id="@+id/current_path_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bar"
        android:textColor="@color/grey"
        android:ellipsize="marquee"
        android:textSize="12sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/bottom_border"
        android:text="@string/internal_storage"
        android:singleLine="true"
        android:scrollHorizontally="true" />

    <android.support.v7.widget.RecyclerView
        android:scrollbars="vertical"
        android:background="@color/white"
        android:id="@+id/recyclerview"
        android:layout_below="@+id/current_path_tv"
        android:layout_above="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        android:id="@+id/navigation"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/bottom_nav_bar" />

    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/action_menu"
            layout="@layout/action_menu_manager"
            android:layout_marginBottom="@dimen/action_menu_bottom_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </RelativeLayout>
</RelativeLayout>