<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.jarvis.sproject.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="@id/navigation"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/header_bg"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/home_header_gradient" />

            <!--<ImageView
                android:id="@+id/header_wave_pattern"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@id/header_bg"
                android:scaleType="fitCenter"
                android:layout_marginBottom="-24dp"
                android:background="@drawable/wave_animation_list" />-->

            <com.scwang.wave.MultiWaveHeader
                android:id="@+id/header_wave_pattern"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignBottom="@+id/header_bg"
                android:scaleY="-1"
                app:mwhCloseColor="@color/white"
                app:mwhColorAlpha="0.5"
                app:mwhGradientAngle="45"
                app:mwhIsRunning="true"
                app:mwhProgress="1"
                app:mwhStartColor="@color/white"
                app:mwhVelocity="4"
                app:mwhWaveHeight="50dp"
                app:mwhWaves="MultiWave">

            </com.scwang.wave.MultiWaveHeader>

            <LinearLayout
                android:id="@+id/header_linear_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="48dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/encryption_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="54"
                        android:textColor="@color/white"
                        android:textSize="32sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/encryption_data"
                        android:text="@string/percentage_symbol"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="48dp"
                        android:text="@string/encrypted"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small_text" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/storage_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="1.68"
                        android:textColor="@color/white"
                        android:textSize="32sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/storage_data"
                        android:text="@string/gb"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="48dp"
                        android:text="@string/free_space"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small_text" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <GridView
            android:id="@+id/grid_view_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:columnWidth="120dp"
            android:background="@android:color/white"
            android:stretchMode="spacingWidth"
            android:numColumns="auto_fit" />
    </LinearLayout>


    <include
        android:id="@+id/navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/bottom_nav_bar" />

</android.support.constraint.ConstraintLayout>
